# SEPP

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.json  setup.sh  test-setup.sh  test.sh
3gpp-docs/: 33517-j00.doc
src/: main.rs
src/auth/: mod.rs
src/certificates/: mod.rs
src/clients/: mod.rs
src/config/: mod.rs
src/crypto/: jwe.rs  jws.rs  mod.rs
src/errors/: mod.rs
src/handlers/: health.rs  mod.rs  n32c.rs  n32f.rs  sbi.rs
src/ipx/: mod.rs
src/messages/: mod.rs
src/middleware/: logging.rs  mod.rs  security.rs
src/n32c/: mod.rs
src/n32f/: mod.rs
src/policies/: mod.rs
src/routing/: mod.rs
src/types/: message.rs  mod.rs  n32.rs  plmn.rs  security.rs
